# Syncra

./: Plex Playlist Dock.py  README.md  ReadMe  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: Syncra-publish.yml  plexplaylistdock-publish.yml  python-publish.yml
src/Syncra/: __init__.py  main.py
