[metadata]
name = Syncraa
version = 1.6.1
author = jaylex32
author_email = jayrossproduction@gmail.com
description = A tool to manage Plex playlists and import from streaming services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaylex32/Syncra
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyQt5
    plexapi
    spotipy
    deezer-python
    requests
    fuzzywuzzy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    Syncraa = Syncraa.main:main